Fix styling of alternative <svg> icons on IE11

--- a/src/Button.css
+++ b/src/Button.css
@@ -45,8 +45,8 @@
 
 svg,
 img,
-::slotted(svg),
-::slotted(img) {
+* ::slotted(svg),
+* ::slotted(img) {
     width: var(--theoplayer-button-icon-width, var(--theoplayer-control-height, 24px));
     height: var(--theoplayer-button-icon-height, var(--theoplayer-control-height, 24px));
     transition: var(--theoplayer-button-icon-transition, none);
